<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Food Tribune</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fb_login_protocol_scheme">fb413252539486080</string>
    <string name="facebook_app_id">413252539486080</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_passwords">Forgot Password</string>
    <string name="err_passwords_match">Password doesn\'t match.</string>
    <string name="err_password">Invalid Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="guest">Guest</string>
    <string name="hi_what_is_your_name">Hi. What is your name?</string>
    <string name="next">Next</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="terms_condition_more">of posting an ad with Renting</string>
    <string name="and">and</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add_a_profile_picture">Add a profile picture</string>
    <string name="make_it_classy">Make it Classy!</string>
    <string name="select_photo">Select Photo</string>
    <string name="retake">Retake</string>
    <string name="looking_good">Looking good!</string>
    <string name="confirm">Confirm</string>
    <string name="start">start</string>
    <string name="a_verification_code_has_been_sent_to_your_mobile_number">A verification code has been sent \n to your mobile number</string>
    <string name="submit">Submit</string>
    <string name="resend_code">Resend Code</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="to_identify_you_we_need_your_phone_number_number">To identify you,\nWe need your phone number</string>
    <string name="to_reset_your_password_please_enter_your_phone_number">To reset your password, please enter \n your phone number</string>
    <string name="great_let_s_create_ypur_takeout_account_now">Great, let\'s create your  \n account now</string>
    <string name="agree_term"><![CDATA[Agree term & condition and privcy policy]]></string>
    <string name="image_required">Image required</string>
    <string name="w_e_l_o_c_o_m_e">W E L C O M E</string>
    <string name="a_l_l_d_o_n_e">A L L \u0020 \u0020D O N E !</string>
    <string name="e_g_burgers_pizza">e.g. Burgers,Pizza...</string>
    <string name="view_all">View More</string>
    <string name="nearby_resturants">Nearby Resturants</string>
    <string name="fast_food_fries_icecream">Fast Food \u2022 Fries \u2022Icecream</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="my_account">My Account</string>
    <string name="nearby_rest">Nearby Resturants</string>
    <string name="simple_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890,.;:[]{}?)(*^%$#@! abcdefghijklmnopqrstuvwxyz</string>
    <string name="number_digits">1234567890</string>
    <string name="no_products_found">no products found</string>
    <string name="example_mileage">Example: 10000</string>
    <string name="example_megapixels">Example: 12</string>
    <string name="example_area">Example: 240</string>
    <string name="example_os">Example: Android</string>
    <string name="example_processor">Example: Snapdragon 660</string>
    <string name="total_area">Total Area (Sq. Feet)</string>
    <string name="minimum_age_error">Minimum required age is 1 Year</string>
    <string name="enter_birthdate">Enter Birthdate</string>
    <string name="age">Age</string>
    <string name="year">Year</string>
    <string name="years">Years</string>
    <string name="expandable_memory">Expandable Memory</string>
    <string name="smart_features">Smart Features</string>
    <string name="pets_allowed">Pets Allowed</string>
    <string name="select_type">Select Type</string>
    <string name="mcDonalds">McDonald\'s</string>
    <string name="mcDonalds_num">+1 123 12345</string>
    <string name="mcDonalds_address">C10, 29th Floor, I Rise tower, Barsha</string>
    <string name="bestsellers">Bestsellers</string>
    <string name="lorem">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here</string>
    <string name="guest_user_sign_in">Guest User Sign In</string>
    <string name="signup_with_google">Sign up with google</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="take_away">Take Away</string>
    <string name="aed">AED</string>
    <string name="sub_total">Sub Total</string>
    <string name="promo_code">Promo Code</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="delivery_to_car">Delivery to car</string>
    <string name="self_collection">Self collection</string>
    <string name="contact_info">Contact Info</string>
    <string name="prepration_time">Prepration Time</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="place_order">Place Order</string>
    <string name="my_cart">My Cart</string>
    <string name="total_inv">Total (inc. VAT)</string>
    <string name="choose_your_payment_option">CHOOSE YOUR PAYMENT OPTION</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="payment">Payment</string>
    <string name="back_to_resturants">Back To Restaurants</string>
    <string name="you_haven_t_added_anything_n_to_your_cart">You haven\'t added anything \n to your cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="implementdialog">To be Implemented</string>
    <string name="your_order_has_been_placed">Your Order Has Been Placed</string>
    <string name="order_id">Order ID</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="order_type">Order Type</string>
    <string name="delivery_to_car_u"><u>Delivery To Car</u></string>
    <string name="lets_quickly_setup">Lets\'s quickly setup your\nRenting account</string>
    <string name="getstarted">Get Started</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="or">OR</string>
    <string name="proceedwithguest">Proceed as Guest</string>
    <string name="gopro">GoPro</string>
    <string name="hero_5_waterproof_action_caemra_64gb">Hero 5 waterproof action caemra 64gb</string>
    <string name="orderHistory">Order History</string>
    <string name="orderDetail">Order Detail</string>
    <string name="changePassword">Change Password</string>
    <string name="aboutUs">About Us</string>
    <string name="rateApp">Rate the App</string>
    <string name="termCondition"><![CDATA[Terms & Conditions]]></string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="searchHere">Search Here…</string>
    <string name="justForYou">JUST FOR YOU</string>
    <string name="thisJustIN">THIS JUST IN</string>
    <string name="topViewed">TOP VIEWED</string>
    <string name="topCategories">BROWSE OUR TOP CATEGORIES</string>
    <string name="exploreTopBrands">EXPLORE TOP BRANDS</string>
    <string name="itemForRent">Items For Rent</string>
    <string name="itemForSale">Items For Sale</string>
    <string name="featured">Featured</string>
    <string name="inquireNow">Inquire Now</string>
    <string name="newText">New</string>
    <string name="product_description">Product Description</string>
    <string name="my_preciopus_gopro_hero_5_is_up_for_grabs_this_weekend_take_your_weekend_trips_to_the_next_level">My Preciopus GoPro Hero 5 is up for grabs this weekend. Take your weekend trips to the next level</string>
    <string name="conditon_perfect">Conditon Perfect</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="location">Location</string>
    <string name="location_data">Location Data</string>
    <string name="payment_options">Payment Options</string>
    <string name="payonline">Pay Online</string>
    <string name="payonline_not">Pay Online is not available</string>
    <string name="not_return">Pay on return is not available on this item</string>
    <string name="yes_return">Pay on return available on this item</string>
    <string name="cash_on_collection">Cash on collection of item</string>
    <string name="cash_on_collection_not">Cash on collection of item is not available</string>
    <string name="sms">SMS</string>
    <string name="call">Call</string>
    <string name="rentnow">Rent Now</string>
    <string name="detail">Detail</string>
    <string name="aed_25">AED 25</string>
    <string name="greetings_how_do_you_plan_to_make_money_today">Greetings! How do you plan to make money today?</string>
    <string name="i_am_here_to">I am here to</string>
    <string name="rent_only">Rent Only</string>
    <string name="sale_only">Sale Only</string>
    <string name="enter_title">Enter the title here (Example : Comaro 2018 V8)</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="choose_brand">Select Brand</string>
    <string name="choose_model">Select Model</string>
    <string name="addproduct">Add Product</string>
    <string name="editproduct">Edit Product</string>
    <string name="compressing_image_please_wait">Wait for compressing image...</string>
    <string name="fiveimages">Five Images</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_the_pic">Are you sure you want to delete this picture?</string>
    <string name="no">No</string>
    <string name="how_much_do_you_plan_to_charge_for_your_item">How much do you plan to charge for your item?</string>
    <string name="enter_your_per_day_amount">Enter your per day amount</string>
    <string name="enter_your_selling_amount">Enter your selling amount</string>
    <string name="i_want_to_charge">I Want to Charge</string>
    <string name="i_plan_to_accept_payments">I Plan to Accept Payments</string>
    <string name="cash_collection">Cash On Collection</string>
    <string name="cash_on_return">Cash on Return</string>
    <string name="select_available_days">Select Available Days</string>
    <string name="product_plan">Product Plan</string>
    <string name="fri_sat_sun_repeated_every_week">Fri, Sat, Sun (Repeated Every Week)</string>
    <string name="to_reset_your_password_enter_the_email_address_that_you_used_to_register">To reset your password enter the Email Address that you used to register</string>
    <string name="signing_up">By signing up, you accept our</string>
    <string name="never_signup_with_phone_number">Remember - Never sign up with\nanother person\'s phone number</string>
    <string name="grand_total">Grand Total</string>
    <string name="customername">Customer Name</string>
    <string name="order_date">Order Date</string>
    <string name="status">Status</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="duration">Duration</string>
    <string name="pickup_date_time">Pickup Date/Time</string>
    <string name="password_en">Password</string>
</resources>