<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp10">

        <LinearLayout
            android:layout_width="@dimen/dp120"
            android:layout_height="@dimen/dp120"
            android:background="@drawable/border_item_rounded"
            android:padding="@dimen/dp8">

            <ImageView
                android:id="@+id/ivProductImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvproducttitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gopro" />


            </LinearLayout>

            <TextView
                android:id="@+id/tvproductmodel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hero_5_waterproof_action_caemra_64gb"
                android:textColor="@color/colorBlackButton"
                android:textSize="@dimen/dp16" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/dp5"
                android:paddingBottom="@dimen/dp5">

                <TextView
                    android:id="@+id/tvCustomername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/customername" />

                <TextView
                    android:id="@+id/tvOrderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/order_id" />

                <TextView
                    android:id="@+id/tvOrderDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/order_date" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp5"
                        android:text="@string/status" />
                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/status" />
                </LinearLayout>
                <TextView
                    android:id="@+id/tvOrderType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/order_type" />

                <TextView
                    android:id="@+id/tvDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/duration" />

                <TextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:text="@string/grand_total" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/vfOrdertime"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_item_rounded"
        android:visibility="gone">


        <TextView
            android:id="@+id/tvPickUpDateTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@android:drawable/ic_menu_my_calendar"
            android:gravity="center"
            android:paddingStart="@dimen/dp15"
            android:paddingTop="@dimen/dp15"
            android:paddingEnd="@dimen/dp15"
            android:paddingBottom="@dimen/dp15"
            android:text="@string/pickup_date_time"
            android:textAllCaps="true"
            android:textSize="@dimen/dp12"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llacceptorreject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp15"
            android:visibility="visible">

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/roundcorner_button"
                android:text="@string/accept"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnReject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp15"
                android:layout_marginEnd="@dimen/dp15"
                android:layout_weight="1"
                android:background="@drawable/rounded_drawable_red"
                android:text="@string/reject"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">





        <View
            android:background="@color/lightGray"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
    </LinearLayout>
</LinearLayout>