<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp10"
            android:gravity="center"
            android:paddingBottom="@dimen/dp20"
            android:text="@string/to_identify_you_we_need_your_phone_number_number"
            android:textColor="@color/colorBlackShade"
            android:textSize="@dimen/sp18" />

        <structure.com.foodportal.helper.CustomTextInputLayout
            android:id="@+id/ctNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_item_rounded"
                android:orientation="horizontal"
                android:padding="@dimen/dp3">

                <TextView
                    android:id="@+id/tvCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp5"
                    android:drawablePadding="@dimen/dp10"
                    android:drawableStart="@drawable/flag_ae"
                    android:gravity="center"
                    android:text="+971"
                    android:textColor="@color/colorBlackShade"
                    android:textSize="@dimen/sp14" />


                <EditText
                    android:id="@+id/etNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dp10"
                    android:background="@null"
                    android:hint="Phone Number"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorBlackShade"
                    android:textColorHint="@color/colorBlackShade"
                    android:digits="@string/number_digits"
                    android:textSize="@dimen/sp14" />

            </LinearLayout>
        </structure.com.foodportal.helper.CustomTextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:orientation="horizontal"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/cbAgree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorRed"
                android:gravity="center"
                android:text="@string/i_agree_to"
                android:textColor="@color/colorBlackShade" />

            <TextView
                android:id="@+id/tvTerm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:text="@string/terms_condition"
                android:textColor="@color/colorRed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:text="@string/and"
                android:textColor="@color/colorBlackShade" />

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorRed" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:layout_gravity="center"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/sp14"
            android:textStyle="bold"
            android:text="@string/never_signup_with_phone_number"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:background="@drawable/roundcorner_button"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />
    </LinearLayout>


</layout>