<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp10"
            android:gravity="center"
            android:paddingBottom="@dimen/dp20"
            android:text="@string/add_a_profile_picture"
            android:textColor="@color/colorBlackShade"
            android:textSize="@dimen/sp18" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivPhoto"
            android:layout_width="@dimen/dp100"
            android:layout_height="@dimen/dp100"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/dp30"
            android:src="@drawable/profile_blue_circle"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/make_it_classy"
            android:textColor="@color/colorBlackShade"
            android:textSize="@dimen/sp16" />

        <Button
            android:id="@+id/btnPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40"
            android:background="@drawable/roundcorner_button"
            android:text="@string/select_photo"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp16" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp40"
            android:background="@drawable/roundcorner_button"
            android:text="@string/confirm"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvRetake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp15"
            android:padding="@dimen/dp10"
            android:text="@string/retake"
            android:textAllCaps="true"
            android:textColor="@color/colorBlackShade"
            android:textStyle="bold"
            android:visibility="gone" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/dp10"
            android:text="Skip"
            android:textColor="@color/colorBlackShade"
            android:textSize="@dimen/sp16" />


    </LinearLayout>

</layout>