<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/dp15"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp100"
        android:textColor="@color/colorBlackButton"
        android:text="@string/to_reset_your_password_enter_the_email_address_that_you_used_to_register"/>
    <structure.com.foodportal.helper.CustomTextInputLayout
        android:id="@+id/ctEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etEmail"
            style="@style/edittextstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:drawablePadding="@dimen/dp10"
            android:drawableStart="@drawable/email"
            android:text=""
            android:hint="@string/email_address"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress" />
    </structure.com.foodportal.helper.CustomTextInputLayout>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/roundcorner_button"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/white" />


</LinearLayout>
</layout>